// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Capacity /> renders Capacity correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Cluster Capacity
    </DashboardCardTitle>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <CapacityBody>
      <CapacityItem
        LoadingComponent={[Function]}
        formatValue={[Function]}
        id="cpu"
        isLoading={false}
        title="CPU"
        total={100}
        used={50}
      />
      <CapacityItem
        LoadingComponent={[Function]}
        formatValue={[Function]}
        id="memory"
        isLoading={false}
        title="Memory"
        total={1048576}
        used={30720}
      />
      <CapacityItem
        LoadingComponent={[Function]}
        formatValue={[Function]}
        id="storage"
        isLoading={false}
        title="Storage"
        total={10240}
        used={5120}
      />
      <CapacityItem
        LoadingComponent={[Function]}
        formatValue={[Function]}
        id="network"
        isLoading={false}
        title="Network"
        total={10}
        used={5}
      />
    </CapacityBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Capacity /> renders Loading Capacity correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Cluster Capacity
    </DashboardCardTitle>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <CapacityBody>
      <CapacityItem
        LoadingComponent={[Function]}
        formatValue={[Function]}
        id="cpu"
        isLoading={true}
        title="CPU"
        total={100}
        used={null}
      />
      <CapacityItem
        LoadingComponent={[Function]}
        formatValue={[Function]}
        id="memory"
        isLoading={true}
        title="Memory"
        total={null}
        used={null}
      />
      <CapacityItem
        LoadingComponent={[Function]}
        formatValue={[Function]}
        id="storage"
        isLoading={true}
        title="Storage"
        total={null}
        used={null}
      />
      <CapacityItem
        LoadingComponent={[Function]}
        formatValue={[Function]}
        id="network"
        isLoading={true}
        title="Network"
        total={null}
        used={null}
      />
    </CapacityBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Capacity /> renders correctly with Provider 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Cluster Capacity
    </h2>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-capacity__items"
    >
      <div
        class="kubevirt-capacity__item"
      >
        <div
          class="kubevirt-capacity__item-title"
        >
          CPU
        </div>
        <h6
          class="kubevirt-capacity__item-description"
        >
          50 % available out of 100 %
        </h6>
        <div
          class="kubevirt-capacity__graph"
          id="donut-chart-cpu"
        >
          <svg
            viewBox="0 0 200 200"
          >
            <g>
              <path
                d="M1.0812807831283575,-91.99364560592235A92,92,0,0,1,1.0812807831283575,91.99364560592235L1.0812807831283446,82.99295651962302A83,83,0,0,0,1.0812807831283446,-82.99295651962302Z"
                role="presentation"
                shape-rendering="auto"
                style="fill:#06c;padding:8px;stroke:transparent;stroke-width:1"
                transform="translate(100, 100)"
              />
              <path
                d="M-1.0812807831283462,91.99364560592235A92,92,0,0,1,-1.081280783128328,-91.99364560592235L-1.0812807831283917,-82.99295651962302A83,83,0,0,0,-1.0812807831283344,82.99295651962302Z"
                role="presentation"
                shape-rendering="auto"
                style="fill:#8bc1f7;padding:8px;stroke:transparent;stroke-width:1"
                transform="translate(100, 100)"
              />
            </g>
            <text
              direction="inherit"
              dx="0"
              dy="8.875"
              x="100"
              y="88"
            >
              <tspan
                dx="0"
                style="font-size:25px;font-family:var(--pf-chart-global--FontFamily);letter-spacing:var(--pf-chart-global--letter-spacing);fill:#252525;stroke:transparent"
                text-anchor="middle"
                x="100"
              >
                50%
              </tspan>
            </text>
            <text
              direction="inherit"
              dx="0"
              dy="5.324999999999999"
              x="100"
              y="112"
            >
              <tspan
                dx="0"
                style="font-size:15px;font-family:var(--pf-chart-global--FontFamily);letter-spacing:var(--pf-chart-global--letter-spacing);fill:#252525;stroke:transparent"
                text-anchor="middle"
                x="100"
              >
                Used
              </tspan>
            </text>
          </svg>
        </div>
      </div>
      <div
        class="kubevirt-capacity__item"
      >
        <div
          class="kubevirt-capacity__item-title"
        >
          Memory
        </div>
        <h6
          class="kubevirt-capacity__item-description"
        >
          1.0 Mi available out of 1 Mi
        </h6>
        <div
          class="kubevirt-capacity__graph"
          id="donut-chart-memory"
        >
          <svg
            viewBox="0 0 200 200"
          >
            <g>
              <path
                d="M1.0812807831283575,-91.99364560592235A92,92,0,0,1,17.659365853688865,-90.28923965592782L15.827987793375726,-81.47683598675607A83,83,0,0,0,1.0812807831283446,-82.99295651962302Z"
                role="presentation"
                shape-rendering="auto"
                style="fill:#06c;padding:8px;stroke:transparent;stroke-width:1"
                transform="translate(100, 100)"
              />
              <path
                d="M19.776688794028967,-89.84922136748948A92,92,0,1,1,-1.081280783128328,-91.99364560592235L-1.0812807831283917,-82.99295651962302A83,83,0,1,0,17.945310733715804,-81.03681769831775Z"
                role="presentation"
                shape-rendering="auto"
                style="fill:#8bc1f7;padding:8px;stroke:transparent;stroke-width:1"
                transform="translate(100, 100)"
              />
            </g>
            <text
              direction="inherit"
              dx="0"
              dy="8.875"
              x="100"
              y="88"
            >
              <tspan
                dx="0"
                style="font-size:25px;font-family:var(--pf-chart-global--FontFamily);letter-spacing:var(--pf-chart-global--letter-spacing);fill:#252525;stroke:transparent"
                text-anchor="middle"
                x="100"
              >
                3%
              </tspan>
            </text>
            <text
              direction="inherit"
              dx="0"
              dy="5.324999999999999"
              x="100"
              y="112"
            >
              <tspan
                dx="0"
                style="font-size:15px;font-family:var(--pf-chart-global--FontFamily);letter-spacing:var(--pf-chart-global--letter-spacing);fill:#252525;stroke:transparent"
                text-anchor="middle"
                x="100"
              >
                Used
              </tspan>
            </text>
          </svg>
        </div>
      </div>
      <div
        class="kubevirt-capacity__item"
      >
        <div
          class="kubevirt-capacity__item-title"
        >
          Storage
        </div>
        <h6
          class="kubevirt-capacity__item-description"
        >
          5 Ki available out of 10 Ki
        </h6>
        <div
          class="kubevirt-capacity__graph"
          id="donut-chart-storage"
        >
          <svg
            viewBox="0 0 200 200"
          >
            <g>
              <path
                d="M1.0812807831283575,-91.99364560592235A92,92,0,0,1,1.0812807831283575,91.99364560592235L1.0812807831283446,82.99295651962302A83,83,0,0,0,1.0812807831283446,-82.99295651962302Z"
                role="presentation"
                shape-rendering="auto"
                style="fill:#06c;padding:8px;stroke:transparent;stroke-width:1"
                transform="translate(100, 100)"
              />
              <path
                d="M-1.0812807831283462,91.99364560592235A92,92,0,0,1,-1.081280783128328,-91.99364560592235L-1.0812807831283917,-82.99295651962302A83,83,0,0,0,-1.0812807831283344,82.99295651962302Z"
                role="presentation"
                shape-rendering="auto"
                style="fill:#8bc1f7;padding:8px;stroke:transparent;stroke-width:1"
                transform="translate(100, 100)"
              />
            </g>
            <text
              direction="inherit"
              dx="0"
              dy="8.875"
              x="100"
              y="88"
            >
              <tspan
                dx="0"
                style="font-size:25px;font-family:var(--pf-chart-global--FontFamily);letter-spacing:var(--pf-chart-global--letter-spacing);fill:#252525;stroke:transparent"
                text-anchor="middle"
                x="100"
              >
                50%
              </tspan>
            </text>
            <text
              direction="inherit"
              dx="0"
              dy="5.324999999999999"
              x="100"
              y="112"
            >
              <tspan
                dx="0"
                style="font-size:15px;font-family:var(--pf-chart-global--FontFamily);letter-spacing:var(--pf-chart-global--letter-spacing);fill:#252525;stroke:transparent"
                text-anchor="middle"
                x="100"
              >
                Used
              </tspan>
            </text>
          </svg>
        </div>
      </div>
      <div
        class="kubevirt-capacity__item"
      >
        <div
          class="kubevirt-capacity__item-title"
        >
          Network
        </div>
        <h6
          class="kubevirt-capacity__item-description"
        >
          5 Bps available out of 10 Bps
        </h6>
        <div
          class="kubevirt-capacity__graph"
          id="donut-chart-network"
        >
          <svg
            viewBox="0 0 200 200"
          >
            <g>
              <path
                d="M1.0812807831283575,-91.99364560592235A92,92,0,0,1,1.0812807831283575,91.99364560592235L1.0812807831283446,82.99295651962302A83,83,0,0,0,1.0812807831283446,-82.99295651962302Z"
                role="presentation"
                shape-rendering="auto"
                style="fill:#06c;padding:8px;stroke:transparent;stroke-width:1"
                transform="translate(100, 100)"
              />
              <path
                d="M-1.0812807831283462,91.99364560592235A92,92,0,0,1,-1.081280783128328,-91.99364560592235L-1.0812807831283917,-82.99295651962302A83,83,0,0,0,-1.0812807831283344,82.99295651962302Z"
                role="presentation"
                shape-rendering="auto"
                style="fill:#8bc1f7;padding:8px;stroke:transparent;stroke-width:1"
                transform="translate(100, 100)"
              />
            </g>
            <text
              direction="inherit"
              dx="0"
              dy="8.875"
              x="100"
              y="88"
            >
              <tspan
                dx="0"
                style="font-size:25px;font-family:var(--pf-chart-global--FontFamily);letter-spacing:var(--pf-chart-global--letter-spacing);fill:#252525;stroke:transparent"
                text-anchor="middle"
                x="100"
              >
                50%
              </tspan>
            </text>
            <text
              direction="inherit"
              dx="0"
              dy="5.324999999999999"
              x="100"
              y="112"
            >
              <tspan
                dx="0"
                style="font-size:15px;font-family:var(--pf-chart-global--FontFamily);letter-spacing:var(--pf-chart-global--letter-spacing);fill:#252525;stroke:transparent"
                text-anchor="middle"
                x="100"
              >
                Used
              </tspan>
            </text>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
